# rustify

./: LICENSE  README.md  pyproject.toml
examples/: main.py
rustify/: __init__.py  cfg.py  consts.py  debug.py  error_handler.py  lib.py  main_func.py  option.py  prelude.py  result.py  test.py
rustify/core/: option.py  panic.py  result.py
rustify/std/: dbg.py
src/rustify/: __init__.py  cfg.py  debug.py  derive.py  option.py  result.py  test.py  test_all.py
